--- a/style.css
+++ b/style.css
@@ -33,3 +33,24 @@
    background-color: transparent;
    font-size: 2rem;
 }
+
+#buttonLanguage {
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 7em;
+  height: 3em;
+  font-size: max(1.3vw, 1.2rem);
+  margin: 10px;
+  color: black;
+  border: 2px wheat solid;
+  background-color: wheat;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: all 10ms linear;
+}
+a{
+  color: black;
+  background-color: wheat;
+  text-decoration: none;
+}
